--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 /Programacion 2/HolaMundo/nbproject/private/
 /Programacion 2/HolaMundo/build/
 /Programacion 2/HolaMundo/dist/
+/Programacion 2/JavaApplication3/nbproject/private/
+/Programacion 2/JavaApplication3/build/
