--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 /Programacion 2/HolaMundo/dist/
 /Programacion 2/JavaApplication3/nbproject/private/
 /Programacion 2/JavaApplication3/build/
+/Probabilidad Y Estadistica/TP POO/nbproject/private/
+/Probabilidad Y Estadistica/TP POO/build/
