add tp introduccion java

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 /Programacion 2/JavaApplication3/build/
 /Probabilidad Y Estadistica/TP POO/nbproject/private/
 /Probabilidad Y Estadistica/TP POO/build/
+/Programacion 2/tpintroduccion/nbproject/private/
+/Programacion 2/tpintroduccion/build/
