--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 /Probabilidad Y Estadistica/TP POO/build/
 /Programacion 2/tpintroduccion/nbproject/private/
 /Programacion 2/tpintroduccion/build/
+/Programacion 2/TP4/nbproject/private/
