Add tp for Relaciones 1:1 and Dependencia de uso y de creacion

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@
 /Programacion 2/tpintroduccion/nbproject/private/
 /Programacion 2/tpintroduccion/build/
 /Programacion 2/TP4/nbproject/private/
+/Programacion 2/Relaciones1A1/nbproject/private/
+/Programacion 2/Relaciones1A1/build/
+/Programacion 2/DependeciaUso/nbproject/private/
+/Programacion 2/DependenciaCreacion/nbproject/private/
