Add tp colecciones java (Falta una vuelta de rosca para entregar

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@
 /Programacion 2/Relaciones1A1/build/
 /Programacion 2/DependeciaUso/nbproject/private/
 /Programacion 2/DependenciaCreacion/nbproject/private/
+/Programacion 2/TpColecciones/nbproject/private/
