Init TP Herencia

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@
 /Programacion 2/DependeciaUso/nbproject/private/
 /Programacion 2/DependenciaCreacion/nbproject/private/
 /Programacion 2/TpColecciones/nbproject/private/
+/Programacion 2/HerenciaPolimorfismo/nbproject/private/
