Initial commit of tpInterfaces project with core classes and interfaces for handling clients, products, orders, and payment processing. Added Cliente, Notificable, Pagable, Pago, and related classes to implement a basic order management system with notification capabilities.

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@
 /Programacion 2/DependenciaCreacion/nbproject/private/
 /Programacion 2/TpColecciones/nbproject/private/
 /Programacion 2/HerenciaPolimorfismo/nbproject/private/
+/Programacion 2/tpInterfaces/nbproject/private/
