Add initial project structure and implement error handling examples
- Created project properties and configuration files for NetBeans.
- Added custom exception class `EdadInvalidaException`.
- Implemented file reading functionality in `LeerArchivo` class.
- Developed main application logic in `ManejoErrores` class with examples of error handling.
- Included a sample text file `archivo.txt` for testing file reading.

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@
 /Programacion 2/TpColecciones/nbproject/private/
 /Programacion 2/HerenciaPolimorfismo/nbproject/private/
 /Programacion 2/tpInterfaces/nbproject/private/
+/Programacion 2/ManejoErrores/nbproject/private/
+/Programacion 2/ManejoErrores/build/
